--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Telefonas</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300&family=Open+Sans:wght@300;600&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="container-fluid">
     <div class="container">
-        <div class="row navbar main-nav text-white">
+        <div class="row nav-bar main-nav text-white">
             <div class="col-6">
                 <a href=""><img src="http://demo.themefisher.com/themefisher/lifetrakr/images/logo.png" alt=""></a>
             </div>
@@ -42,6 +47,169 @@
         </div>
     </div>
 </header>
+<main>
+    <section class="banner bg-main">
+        <section class="container py-0">
+            <div class="row">
+                <div class="col-8 r-col">
+                    <div class="content-block text-white">
+                        <h1>Amazing App Best for business</h1>
+                        <h5>Let you track everything in your life with a simple way</h5>
+                        <div class="app-badge">
+                            <ul class="d-flex list-unstyled">
+                                <li class="list-inline-item">
+                                    <a href="#"><img class="img-fluid"
+                                                     src="http://demo.themefisher.com/themefisher/lifetrakr/images/app-badge/google-play.png"
+                                                     alt="google-play"></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#"><img class="img-fluid"
+                                                     src="http://demo.themefisher.com/themefisher/lifetrakr/images/app-badge/app-store.png"
+                                                     alt="app-store"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="image-block">
+                        <div class="image">
+                            <img src="http://demo.themefisher.com/themefisher/lifetrakr/images/phones/iphone-banner.png"
+                                 alt="phone">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="container-fluid about section bg-2">
+        <section class="container d-flex py-0">
+            <div class="col-5 mr-auto">
+                <div class="image-block">
+                    <img src="http://demo.themefisher.com/themefisher/lifetrakr/images/phones/iphone-chat.png" alt="">
+                </div>
+            </div>
+            <div class="col-6 d-flex flex-column m-auto r-col2">
+                <div class="row">
+                    <div class="col-12 about-cols">
+                        <div class="about-item d-flex w-100">
+                            <div class="col-3 text-center">
+                                <i class="far fa-copy"></i>
+                            </div>
+                            <div class=" col-9 content1">
+                                <h5>Creative Design</h5>
+                                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                    praising pain was born and I will give you a complete accounta</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 about-cols">
+                        <div class="about-item d-flex w-100 bg-v">
+                            <div class="col-3 text-center">
+                                <i class="fas fa-globe"></i>
+                            </div>
+                            <div class="col-9 content text-white">
+                                <h5>EASY TO USE</h5>
+                                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                    praising pain was born and I will give you a complete accounta</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 about-cols">
+                        <div class="about-item d-flex w-100">
+                            <div class="col-3 text-center">
+                                <i class="far fa-compass"></i>
+                            </div>
+                            <div class=" col-9 content1">
+                                <h5>BEST USER EXPERIENCE</h5>
+                                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                    praising pain was born and I will give you a complete accounta</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="container-fluid section">
+        <section class="container py-0">
+            <div class="row">
+                <div class="col-12 section-title d-flex flex-column text-center">
+                    <h2>App Features</h2>
+                    <p>Demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot
+                        foresee idea of denouncing pleasure and praising</p>
+                </div>
+            </div>
+            <div class="row bg-elipse">
+                <div class="col-4">
+                    <div class="feature-item mb-80">
+                        <div class="icon text-right">
+                            <i class="far fa-compass"></i>
+                        </div>
+                        <div class="content2 text-right">
+                            <h5>Beautiful Interface Design</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        </div>
+                    </div>
+                    <div class="feature-item mb-80">
+                        <div class="icon text-right">
+                            <i class="far fa-compass"></i>
+                        </div>
+                        <div class="content2 text-right">
+                            <h5>Beautiful Interface Design</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="feature-item mb-0">
+                        <div class="icon text-center">
+                            <i class="far fa-comments"></i>
+                        </div>
+                        <div class="content2 text-center">
+                            <h5>Full free chat</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        </div>
+                        <div class="app-screen d-flex justify-content-center">
+                            <img class="img-fluid" src="http://demo.themefisher.com/themefisher/lifetrakr/images/phones/i-phone-screen.png" alt="app-screen">
+                        </div>
+                        <div class="icon text-center">
+                            <i class="fas fa-hourglass-start"></i>
+                        </div>
+                        <div class="content2 text-center">
+                            <h5>24/7 SUPPORT BY REAL PEOPLE</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="feature-item mb-80">
+                        <div class="icon text-left">
+                            <i class="far fa-compass"></i>
+                        </div>
+                        <div class="content2 text-left">
+                            <h5>Beautiful Interface Design</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        </div>
+                    </div>
+                    <div class="feature-item mb-80">
+                        <div class="icon text-left">
+                            <i class="far fa-compass"></i>
+                        </div>
+                        <div class="content2 text-left">
+                            <h5>Beautiful Interface Design</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+</main>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
 </body>
