--- a/index.html
+++ b/index.html
@@ -145,14 +145,15 @@
                 </div>
             </div>
             <div class="row bg-elipse">
-                <div class="col-4">
+                <div class="col-4 align-self-center">
                     <div class="feature-item mb-80">
                         <div class="icon text-right">
                             <i class="far fa-compass"></i>
                         </div>
                         <div class="content2 text-right">
                             <h5>Beautiful Interface Design</h5>
-                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                praising</p>
                         </div>
                     </div>
                     <div class="feature-item mb-80">
@@ -161,48 +162,146 @@
                         </div>
                         <div class="content2 text-right">
                             <h5>Beautiful Interface Design</h5>
-                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                praising</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 align-self-center">
                     <div class="feature-item mb-0">
                         <div class="icon text-center">
                             <i class="far fa-comments"></i>
                         </div>
                         <div class="content2 text-center">
                             <h5>Full free chat</h5>
-                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                praising</p>
                         </div>
                         <div class="app-screen d-flex justify-content-center">
-                            <img class="img-fluid" src="http://demo.themefisher.com/themefisher/lifetrakr/images/phones/i-phone-screen.png" alt="app-screen">
+                            <img class="img-fluid"
+                                 src="http://demo.themefisher.com/themefisher/lifetrakr/images/phones/i-phone-screen.png"
+                                 alt="app-screen">
                         </div>
                         <div class="icon text-center">
                             <i class="fas fa-hourglass-start"></i>
                         </div>
                         <div class="content2 text-center">
                             <h5>24/7 SUPPORT BY REAL PEOPLE</h5>
-                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                praising</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 align-self-center">
+                    <div class="feature-item mb-80">
+                        <div class="icon text-left">
+                            <i class="far fa-compass"></i>
+                        </div>
+                        <div class="content2 text-left">
+                            <h5>Beautiful Interface Design</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                praising</p>
+                        </div>
+                    </div>
+                    <div class="feature-item mb-80">
+                        <div class="icon text-left">
+                            <i class="far fa-compass"></i>
+                        </div>
+                        <div class="content2 text-left">
+                            <h5>Beautiful Interface Design</h5>
+                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and
+                                praising</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="container-fluid p-video section bg-4 overlay">
+        <section class="container py-0">
+            <div class="row">
+                <div class="col-12">
+                    <div class="video">
+                        <img class="img-fluid" src="http://demo.themefisher.com/themefisher/lifetrakr/images/backgrounds/promo-video-bg.jpg"
+                             alt="">
+                        <div class="video-button video-box">
+                            <a class="text-decoration-none" href="javascript:void(0)">
+							<span class="icon" data-video="https://www.youtube.com/watch?v=g3-VxLQO7do&feature=emb_logo">
+							<i class="fas fa-play"></i>
+							</span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="container-fluid pricing section bg-shape">
+        <section class="container py-0">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-title">
+                        <h2>Choose Your Subscription Plan</h2>
+                        <p>Demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee idea of denouncing pleasure and praising</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="pricing-table text-center">
+                        <div class="title">
+                            <h5>Free</h5>
+                        </div>
+                        <div class="price">
+                            <p>$0<span>/month</span></p>
+                        </div>
+                        <ul class="feature-list list-unstyled">
+                            <li>Android App</li>
+                            <li>One time payment</li>
+                            <li>Build &amp; Publish</li>
+                            <li>Life time support</li>
+                        </ul>
+                        <div class="action-button">
+                            <a href="" class="btn btn-main-rounded">Start Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="feature-item mb-80">
-                        <div class="icon text-left">
-                            <i class="far fa-compass"></i>
+                    <div class="pricing-table text-center">
+                        <div class="title">
+                            <h5>Free</h5>
                         </div>
-                        <div class="content2 text-left">
-                            <h5>Beautiful Interface Design</h5>
-                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        <div class="price">
+                            <p>$19<span>/month</span></p>
+                        </div>
+                        <ul class="feature-list list-unstyled">
+                            <li>Android App</li>
+                            <li>One time payment</li>
+                            <li>Build &amp; Publish</li>
+                            <li>Life time support</li>
+                        </ul>
+                        <div class="action-button">
+                            <a href="" class="btn btn-main-rounded">Start Now</a>
                         </div>
                     </div>
-                    <div class="feature-item mb-80">
-                        <div class="icon text-left">
-                            <i class="far fa-compass"></i>
+                </div>
+                <div class="col-4">
+                    <div class="pricing-table text-center">
+                        <div class="title">
+                            <h5>Free</h5>
                         </div>
-                        <div class="content2 text-left">
-                            <h5>Beautiful Interface Design</h5>
-                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising</p>
+                        <div class="price">
+                            <p>$99<span>/month</span></p>
+                        </div>
+                        <ul class="feature-list list-unstyled">
+                            <li>Android App</li>
+                            <li>One time payment</li>
+                            <li>Build &amp; Publish</li>
+                            <li>Life time support</li>
+                        </ul>
+                        <div class="action-button">
+                            <a href="" class="btn btn-main-rounded">Start Now</a>
                         </div>
                     </div>
                 </div>
