--- a/index.html
+++ b/index.html
@@ -222,11 +222,13 @@
             <div class="row">
                 <div class="col-12">
                     <div class="video">
-                        <img class="img-fluid" src="http://demo.themefisher.com/themefisher/lifetrakr/images/backgrounds/promo-video-bg.jpg"
+                        <img class="img-fluid"
+                             src="http://demo.themefisher.com/themefisher/lifetrakr/images/backgrounds/promo-video-bg.jpg"
                              alt="">
                         <div class="video-button video-box">
                             <a class="text-decoration-none" href="javascript:void(0)">
-							<span class="icon" data-video="https://www.youtube.com/watch?v=g3-VxLQO7do&feature=emb_logo">
+							<span class="icon"
+                                  data-video="https://www.youtube.com/watch?v=g3-VxLQO7do&feature=emb_logo">
 							<i class="fas fa-play"></i>
 							</span>
                             </a>
@@ -243,7 +245,8 @@
                 <div class="col-12">
                     <div class="section-title">
                         <h2>Choose Your Subscription Plan</h2>
-                        <p>Demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee idea of denouncing pleasure and praising</p>
+                        <p>Demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot
+                            foresee idea of denouncing pleasure and praising</p>
                     </div>
                 </div>
             </div>
@@ -307,6 +310,255 @@
                 </div>
             </div>
         </section>
+    </section>
+    <section class="cta-download bg-3 overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="image-block"><img class="img-fluid"
+                                                  src="http://demo.themefisher.com/themefisher/lifetrakr/images/phones/iphone-chat.png"
+                                                  alt=""></div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="content-block">
+                        <h2>Free Download Now</h2>
+                        <p>Demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot
+                            foresee idea of denouncing pleasure and praising</p>
+                        <div class="app-badge">
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="#"><img class="img-fluid"
+                                                     src="http://demo.themefisher.com/themefisher/lifetrakr/images/app-badge/google-play.png"
+                                                     alt="google-play"></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#"><img class="img-fluid"
+                                                     src="http://demo.themefisher.com/themefisher/lifetrakr/images/app-badge/google-play.png"
+                                                     alt="google-play"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section counter bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="counter-item text-white">
+                        <h3>29k</h3>
+                        <p>Download</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="counter-item text-white">
+                        <h3>200k</h3>
+                        <p>Active Account</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="counter-item text-white">
+                        <h3>60k</h3>
+                        <p>Happy User</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="counter-item text-white">
+                        <h3>300k<sup>+</sup></h3>
+                        <p>Download</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section team bg-shape-two">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-title">
+                        <h2>Our Creative Team</h2>
+                        <p>Demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot
+                            foresee idea of denouncing pleasure and praising</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <div class="team-member text-center">
+                        <div class="image">
+                            <img class="img-fluid"
+                                 src="http://demo.themefisher.com/themefisher/lifetrakr/images/team/member-one.jpg"
+                                 alt="team-member">
+                        </div>
+                        <div class="name">
+                            <h5>Johnny Depp</h5>
+                        </div>
+                        <div class="position">
+                            <p>Production Designer</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="progress" data-percent="85%">
+                                <div class="progress-bar" style="width: 85%;"></div>
+                            </div>
+                            <span>85%</span>
+                        </div>
+                        <ul class="social-icons d-flex justify-content-center align-self-center pl-0">
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="team-member text-center">
+                        <div class="image">
+                            <img class="img-fluid"
+                                 src="http://demo.themefisher.com/themefisher/lifetrakr/images/team/member-one.jpg"
+                                 alt="team-member">
+                        </div>
+                        <div class="name">
+                            <h5>Johnny Depp</h5>
+                        </div>
+                        <div class="position">
+                            <p>Production Designer</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="progress" data-percent="85%">
+                                <div class="progress-bar" style="width: 85%;"></div>
+                            </div>
+                            <span>85%</span>
+                        </div>
+                        <ul class="social-icons d-flex justify-content-center align-self-center pl-0">
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="team-member text-center">
+                        <div class="image">
+                            <img class="img-fluid"
+                                 src="http://demo.themefisher.com/themefisher/lifetrakr/images/team/member-one.jpg"
+                                 alt="team-member">
+                        </div>
+                        <div class="name">
+                            <h5>Johnny Depp</h5>
+                        </div>
+                        <div class="position">
+                            <p>Production Designer</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="progress" data-percent="85%">
+                                <div class="progress-bar" style="width: 85%;"></div>
+                            </div>
+                            <span>85%</span>
+                        </div>
+                        <ul class="social-icons d-flex justify-content-center align-self-center pl-0">
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="team-member text-center">
+                        <div class="image">
+                            <img class="img-fluid"
+                                 src="http://demo.themefisher.com/themefisher/lifetrakr/images/team/member-one.jpg"
+                                 alt="team-member">
+                        </div>
+                        <div class="name">
+                            <h5>Johnny Depp</h5>
+                        </div>
+                        <div class="position">
+                            <p>Production Designer</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="progress" data-percent="85%">
+                                <div class="progress-bar" style="width: 85%;"></div>
+                            </div>
+                            <span>85%</span>
+                        </div>
+                        <ul class="social-icons d-flex justify-content-center align-self-center pl-0">
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="" href="">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </main>
 <script type="text/javascript" src="js/jquery.js"></script>
